# serializer version: 1
# name: test_entities[select.test_device_camera_preset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '1',
        '2',
        '3',
        '4',
        '5',
        '6',
        '7',
        '8',
        '9',
        '10',
        '11',
        '12',
        '13',
        '14',
        '15',
        '16',
        '17',
        '18',
        '19',
        '20',
        '21',
        '22',
        '23',
        '24',
        '25',
        '26',
        '27',
        '28',
        '29',
        '30',
        '31',
        '32',
        '33',
        '34',
        '35',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.test_device_camera_preset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Camera preset',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:camera-control',
    'original_name': 'Camera preset',
    'platform': 'webex_ce',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'camera_preset',
    'unique_id': 'FOC2341P2G6_camera_preset',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[select.test_device_camera_preset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Device Camera preset',
      'icon': 'mdi:camera-control',
      'options': list([
        '1',
        '2',
        '3',
        '4',
        '5',
        '6',
        '7',
        '8',
        '9',
        '10',
        '11',
        '12',
        '13',
        '14',
        '15',
        '16',
        '17',
        '18',
        '19',
        '20',
        '21',
        '22',
        '23',
        '24',
        '25',
        '26',
        '27',
        '28',
        '29',
        '30',
        '31',
        '32',
        '33',
        '34',
        '35',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.test_device_camera_preset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[select.test_device_presentation_source-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '1',
        '2',
        '3',
        '4',
        '5',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.test_device_presentation_source',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Presentation source',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:video-input-hdmi',
    'original_name': 'Presentation source',
    'platform': 'webex_ce',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'presentation_source',
    'unique_id': 'FOC2341P2G6_presentation_source',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[select.test_device_presentation_source-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Device Presentation source',
      'icon': 'mdi:video-input-hdmi',
      'options': list([
        '1',
        '2',
        '3',
        '4',
        '5',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.test_device_presentation_source',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[select.test_device_standby-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'awake',
        'halfwake',
        'sleep',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.test_device_standby',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Standby',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:monitor',
    'original_name': 'Standby',
    'platform': 'webex_ce',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'standby',
    'unique_id': 'FOC2341P2G6_standby',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[select.test_device_standby-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Device Standby',
      'icon': 'mdi:monitor',
      'options': list([
        'awake',
        'halfwake',
        'sleep',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.test_device_standby',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
